fix contraste

--- a/assets/scss/single/article.scss
+++ b/assets/scss/single/article.scss
@@ -4,14 +4,14 @@
     word-wrap: break-word;
     p {
         font-family: 'nunito';
-        line-height: 1.5em;
+        line-height: 1.6em;
         margin: 15px 0;
     }
 
     :not(.chroma) > code {
         background-color: white;
         color: black;
-        padding: 0 3px;
+        padding: 0 2px;
         font-weight: bold;
         border-radius: 5px;
         margin: 0 3px;
