--- a/assets/scss/single/syntax.scss
+++ b/assets/scss/single/syntax.scss
@@ -60,11 +60,11 @@
 /* Operator */ .chroma .o { color: #ff79c6 }
 /* OperatorWord */ .chroma .ow { color: #ff79c6 }
 /* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color: #6272a4 }
-/* CommentHashbang */ .chroma .ch { color: #6272a4 }
-/* CommentMultiline */ .chroma .cm { color: #6272a4 }
-/* CommentSingle */ .chroma .c1 { color: #6272a4 }
-/* CommentSpecial */ .chroma .cs { color: #6272a4 }
+/* Comment */ .chroma .c { color: #979FC3 }
+/* CommentHashbang */ .chroma .ch { color: #979FC3 }
+/* CommentMultiline */ .chroma .cm { color: #979FC3 }
+/* CommentSingle */ .chroma .c1 { color: #979FC3 }
+/* CommentSpecial */ .chroma .cs { color: #979FC3 }
 /* CommentPreproc */ .chroma .cp { color: #ff79c6 }
 /* CommentPreprocFile */ .chroma .cpf { color: #ff79c6 }
 /* Generic */ .chroma .g {  }
